golang nvim dap + disable tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g renumber-windows on
 # change personal status bar color
 set -g status-bg colour12
 
-source-file ~/.tmux.gruvbox.conf
+# source-file ~/.tmux.gruvbox.conf
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
